[gd_scene load_steps=23 format=2]

[ext_resource path="res://Objects/Fish.gd" type="Script" id=1]
[ext_resource path="res://Objects/FishPhysics.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://Objects/fish_mesh_mid.glb" type="PackedScene" id=3]
[ext_resource path="res://Objects/fish_mesh_tail4.glb" type="PackedScene" id=4]
[ext_resource path="res://Objects/fish_mesh_tail2.glb" type="PackedScene" id=5]
[ext_resource path="res://Objects/fish_mesh_tail1.glb" type="PackedScene" id=6]
[ext_resource path="res://Objects/fish_mesh_tail3.glb" type="PackedScene" id=7]
[ext_resource path="res://Objects/fish_mesh_head.glb" type="PackedScene" id=8]
[ext_resource path="res://Objects/FishMaterial.tres" type="Material" id=9]
[ext_resource path="res://Objects/FishPart.gd" type="Script" id=10]
[ext_resource path="res://Sound/tail_impact1.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound/impact1.wav" type="AudioStream" id=12]
[ext_resource path="res://Sound/impact2.wav" type="AudioStream" id=13]
[ext_resource path="res://Sound/impact3.wav" type="AudioStream" id=14]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0715505, 0.0211171, 0.0219406 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.215686, 0.215686, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.0512449, 0.0310566, 0.0525733 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.0394578, 0.0288389, 0.0583468 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.0394578, 0.0244966, 0.0464415 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.0394578, 0.0201882, 0.0542703 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.0472322, 0.00359943, 0.0717857 )

[node name="Fish" type="Spatial"]
script = ExtResource( 1 )

[node name="FishHead" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.095557, 0, 0 )
collision_layer = 2
physics_material_override = ExtResource( 2 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="FishHead"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0191673, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="FishHead"]
transform = Transform( 0.0513871, 0, 0, 0, 0.0117396, 0, 0, 0, 0.0692377, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="fish_mesh_head" parent="FishHead" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.139044, 0, 0 )

[node name="Head" parent="FishHead/fish_mesh_head/Armature/Skeleton" index="0"]
material/0 = ExtResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FishHead"]
stream = ExtResource( 12 )

[node name="FishMid" type="RigidBody" parent="."]
collision_layer = 10
collision_mask = 5
physics_material_override = ExtResource( 2 )
can_sleep = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true

[node name="CollisionShape" type="CollisionShape" parent="FishMid"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="FishMid"]
transform = Transform( 0.0513871, 0, 0, 0, 0.0154357, 0, 0, 0, 0.0908024, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="fish_mesh_mid" parent="FishMid" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.044125, 0, 0 )

[node name="SegmentMid" parent="FishMid/fish_mesh_mid" index="0"]
material/0 = ExtResource( 9 )

[node name="FishTail1" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0765282, 0, 0 )
collision_layer = 2
mass = 0.7
physics_material_override = ExtResource( 2 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="FishTail1"]
shape = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="FishTail1"]
transform = Transform( 0.0400522, 0, 0, 0, 0.0123879, 0, 0, 0, 0.0749664, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="fish_mesh_tail1" parent="FishTail1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0388512, 0, 0 )

[node name="Segment1" parent="FishTail1/fish_mesh_tail1" index="0"]
material/0 = ExtResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FishTail1"]
stream = ExtResource( 13 )

[node name="FishTail2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.146904, 0, 0 )
collision_layer = 2
mass = 0.6
physics_material_override = ExtResource( 2 )
can_sleep = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true

[node name="CollisionShape" type="CollisionShape" parent="FishTail2"]
shape = SubResource( 7 )

[node name="MeshInstance3" type="MeshInstance" parent="FishTail2"]
transform = Transform( 0.0386501, 0, 0, 0, 0.00889924, 0, 0, 0, 0.0650494, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="fish_mesh_tail2" parent="FishTail2" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.109718, 0, 0 )

[node name="Tail2" parent="FishTail2/fish_mesh_tail2" index="0"]
material/0 = ExtResource( 9 )

[node name="FishTail3" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.220269, 0, 0 )
collision_layer = 2
mass = 0.5
physics_material_override = ExtResource( 2 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="FishTail3"]
shape = SubResource( 8 )

[node name="MeshInstance3" type="MeshInstance" parent="FishTail3"]
transform = Transform( 0.0386501, 0, 0, 0, 0.00780022, 0, 0, 0, 0.0531879, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="fish_mesh_tail3" parent="FishTail3" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.181894, 0, 0 )

[node name="Tail3" parent="FishTail3/fish_mesh_tail3" index="0"]
material/0 = ExtResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FishTail3"]
stream = ExtResource( 14 )

[node name="FishTail4" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.29214, 0, 0 )
collision_layer = 2
mass = 0.1
physics_material_override = ExtResource( 2 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="FishTail4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00731426, 0, 0 )
shape = SubResource( 9 )

[node name="MeshInstance3" type="MeshInstance" parent="FishTail4"]
transform = Transform( 0.0386501, 0, 0, 0, 0.00412496, 0, 0, 0, 0.0711668, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="fish_mesh_tail4" parent="FishTail4" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.253742, 0, 0 )

[node name="Tail4" parent="FishTail4/fish_mesh_tail4" index="0"]
material/0 = ExtResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FishTail4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.215612, 0, 0 )
stream = ExtResource( 11 )
pitch_scale = 1.26

[node name="HingeTail1" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0447523, 0, 0 )
nodes/node_a = NodePath("../FishMid")
nodes/node_b = NodePath("../FishTail1")
angular_limit/enable = true
angular_limit/upper = 20.0
angular_limit/lower = -20.0

[node name="HingeTail2" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.111678, 0, 0 )
nodes/node_a = NodePath("../FishTail1")
nodes/node_b = NodePath("../FishTail2")
angular_limit/enable = true
angular_limit/upper = 20.0
angular_limit/lower = -20.0

[node name="HingeTail3" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.183212, 0, 0 )
nodes/node_a = NodePath("../FishTail2")
nodes/node_b = NodePath("../FishTail3")
angular_limit/enable = true
angular_limit/upper = 20.0
angular_limit/lower = -20.0

[node name="HingeTail4" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.257225, 0, 0 )
nodes/node_a = NodePath("../FishTail3")
nodes/node_b = NodePath("../FishTail4")
angular_limit/enable = true
angular_limit/upper = 10.0
angular_limit/lower = -10.0

[node name="HingeHead" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0457637, 0, 0 )
nodes/node_a = NodePath("../FishHead")
nodes/node_b = NodePath("../FishMid")
angular_limit/enable = true
angular_limit/upper = 10.0
angular_limit/lower = -10.0

[node name="GaspTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="FishHead" to="FishHead" method="_on_body_entered"]
[connection signal="body_entered" from="FishTail1" to="FishTail1" method="_on_body_entered"]
[connection signal="body_entered" from="FishTail3" to="FishTail3" method="_on_body_entered"]
[connection signal="body_entered" from="FishTail4" to="FishTail4" method="_on_FishTail4_body_entered"]
[connection signal="timeout" from="GaspTimer" to="." method="_on_GaspTimer_timeout"]

[editable path="FishHead/fish_mesh_head"]
[editable path="FishMid/fish_mesh_mid"]
[editable path="FishTail1/fish_mesh_tail1"]
[editable path="FishTail2/fish_mesh_tail2"]
[editable path="FishTail3/fish_mesh_tail3"]
[editable path="FishTail4/fish_mesh_tail4"]
